[gd_scene load_steps=8 format=3 uid="uid://bs0kepu72kj5c"]

[ext_resource type="Script" uid="uid://bh5jw23nqmvn0" path="res://scenes/game.gd" id="1_4jacs"]
[ext_resource type="Texture2D" uid="uid://du1a64d2kgmgt" path="res://assets/GameBg.png" id="1_75quh"]
[ext_resource type="PackedScene" uid="uid://bs7g6dbwclebx" path="res://scenes/paddle.tscn" id="2_gf1r2"]
[ext_resource type="PackedScene" uid="uid://85nywijff1qr" path="res://scenes/gem.tscn" id="3_75upp"]
[ext_resource type="AudioStream" uid="uid://yairif2j0nvy" path="res://assets/bgm_action_5.mp3" id="5_2n82p"]
[ext_resource type="AudioStream" uid="uid://ljsm5450m6s6" path="res://assets/spell1_0.wav" id="6_sr8b8"]
[ext_resource type="AudioStream" uid="uid://b20j306segn1" path="res://assets/explode.wav" id="7_hx5js"]

[node name="Game" type="Node2D"]
script = ExtResource("1_4jacs")
gem_scene = ExtResource("3_75upp")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(579, 326)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_75quh")

[node name="Paddle" parent="." instance=ExtResource("2_gf1r2")]
position = Vector2(548, 599)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
top_level = true
offset_left = 50.0
offset_top = 50.0
offset_right = 324.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(1, 0.697946, 0.908263, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.393086, 0.393086, 0.393085, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 48
text = "00000

"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2n82p")
volume_db = -16.865
autoplay = true

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_sr8b8")
volume_db = -12.876

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_hx5js")
volume_db = -12.876

[node name="GameOverLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
offset_left = 55.0
offset_top = 211.0
offset_right = 1122.0
offset_bottom = 465.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.940898, 0.777266, 0.857985, 1)
theme_override_colors/font_outline_color = Color(0.20871, 0.20871, 0.20871, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 186
text = "GAME OVER"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
